--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>testee</artifactId>
+	<artifactId>Mulesofttraining01</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>testee</name>
+	<name>Mulesofttraining01</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +29,26 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+				   <cloudHubDeployment>
+    <uri>https://anypoint.mulesoft.com</uri>  <!-- or your specific CloudHub endpoint -->
+    <muleVersion>${mule.version}</muleVersion>
+    <username>${anypoint.username}</username>
+    <password>${anypoint.password}</password>
+    <businessGroup>${business}</businessGroup>
+    <environment>${env}</environment>
+    <applicationName>${appname}</applicationName>
+     <workerType>${vCore}</workerType>
+     <workers>${workers}</workers>
+    <objectStore>true</objectStore>
+    <!-- <properties>
+        <property1>${property1}</property1>
+        <property2>${property2}</property2>
+    </properties> -->
+</cloudHubDeployment>
+<classifier>mule-application</classifier>
+				</configuration>
+				
 			</plugin>
 		</plugins>
 	</build>
