--- a/pom.xml
+++ b/pom.xml
@@ -30,22 +30,34 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				   <cloudHubDeployment>
+				   <cloudhub2Deployment>
     <uri>https://anypoint.mulesoft.com</uri>  <!-- or your specific CloudHub endpoint -->
+	<provider>MC</provider>
+	<target>Cloudhub-US-East-2</target>
     <muleVersion>${mule.version}</muleVersion>
     <username>${anypoint.username}</username>
     <password>${anypoint.password}</password>
     <businessGroup>${business}</businessGroup>
     <environment>${env}</environment>
     <applicationName>${appname}</applicationName>
+	<replicas>1</replicas>
      <workerType>${vCore}</workerType>
      <workers>${workers}</workers>
-     <objectStore>${objectStore}</objectStore>
-    <!--<properties>
+	 <deploymentSettings>
+  <http>
+    <inbound>
+      <publicUrl>https://myapp.anypoint.com</publicUrl>
+      <lastMileSecurity>true</lastMileSecurity>
+      <forwardSslSession>true</forwardSslSession>
+    </inbound>
+  </http>
+</deploymentSettings>
+     <!--<objectStore>${objectStore}</objectStore>
+    <properties>
         <property1>${property1}</property1>
         <property2>${property2}</property2>
     </properties> -->
-</cloudHubDeployment>
+</cloudhub2Deployment>
 <classifier>mule-application</classifier>
 				</configuration>
 				
