--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <applicationName>${appname}</applicationName>
 	<replicas>1</replicas>
      <vCores>1</vCores>
-     <deploymentSettings>
+     <!--<deploymentSettings>
   <http>
     <inbound>
       <publicUrl>https://myapp.anypoint.com</publicUrl>
@@ -52,7 +52,7 @@
     </inbound>
   </http>
 </deploymentSettings>
-     <!--<objectStore>${objectStore}</objectStore>
+     <objectStore>${objectStore}</objectStore>
     <properties>
         <property1>${property1}</property1>
         <property2>${property2}</property2>
@@ -99,12 +99,12 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		<repository>
+		<!--<repository>
          <id>Repository</id>
          <name>Private Exchange repository</name>
          <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
          <layout>default</layout>
-       </repository>
+       </repository> -->
 	</repositories>
 
 	<pluginRepositories>
@@ -118,7 +118,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-<!-- Added for Exchange deployment -->
+<!-- Added for Exchange deployment 
     <distributionManagement>
         <repository>
             <id>Repository</id>
@@ -126,5 +126,5 @@
             <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
             <layout>default</layout>
         </repository>
-    </distributionManagement>
+    </distributionManagement>-->
 </project>
