--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 	<provider>MC</provider>
 	<target>Cloudhub-US-East-2</target>
     <muleVersion>${mule.version}</muleVersion>
-    <username>${anypoint.username}</username>
-    <password>${anypoint.password}</password>
-    <businessGroup>${business}</businessGroup>
-    <environment>${env}</environment>
-    <applicationName>${appname}</applicationName>
+    <username>NeelanNew1</username>
+    <password>Magizh@123</password>
+    <businessGroup>CTS</businessGroup>
+    <environment>Sandbox</environment>
+    <applicationName>muletraining</applicationName>
 	<replicas>1</replicas>
      <vCores>1</vCores>
      <!--<deploymentSettings>
