--- a/pom.xml
+++ b/pom.xml
@@ -99,12 +99,12 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		<!--<repository>
+		<repository>
          <id>Repository</id>
          <name>Private Exchange repository</name>
          <url>https://maven.anypoint.mulesoft.com/api/v2/organizations/${project.groupId}/maven</url>
          <layout>default</layout>
-       </repository>-->
+       </repository>
 	</repositories>
 
 	<pluginRepositories>
