--- a/pom.xml
+++ b/pom.xml
@@ -87,12 +87,12 @@
 	</dependencies>
 
 	<repositories>
-		<repository>
+		<!--<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
 			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
 			<layout>default</layout>
-		</repository>
+		</repository> -->
 		<repository>
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
@@ -118,7 +118,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-<!-- Added for Exchange deployment -->
+<!-- Added for Exchange deployment 
     <distributionManagement>
     <repository>
       <id>Repository</id>
@@ -126,5 +126,5 @@
       <url>https://maven.eu1.anypoint.mulesoft.com/api/v3/organizations/ORGANIZATION_ID/maven</url>
       <layout>default</layout>
     </repository>
-  </distributionManagement>
+  </distributionManagement>-->
 </project>
