--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,29 @@
 				</configuration>
 				
 			</plugin>
+		
+	        <plugin>
+                <groupId>org.mule.tools.maven</groupId>
+                <artifactId>exchange-mule-maven-plugin</artifactId>
+                <version>${exchange.mule.maven.plugin}</version>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>exchange-pre-deploy</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>exchange-deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <inherited>false</inherited>
+            </plugin>	
 		</plugins>
 	</build>
 
@@ -86,7 +109,7 @@
 		</dependency>
 	</dependencies>
 
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
@@ -104,8 +127,8 @@
          <name>Private Exchange repository</name>
          <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
          <layout>default</layout>
-       </repository>-->
-	</repositories>
+       </repository>
+	</repositories> -->
 
 	<pluginRepositories>
 		<pluginRepository>
@@ -118,7 +141,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-<!-- Added for Exchange deployment -->
+<!-- Added for Exchange deployment 
     <distributionManagement>
     <repository>
       <id>Repository</id>
@@ -126,5 +149,14 @@
       <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
       <layout>default</layout>
     </repository>
-  </distributionManagement>
+  </distributionManagement> -->
+  <distributionManagement>
+        <repository>
+            <id>anypoint-exchange</id>
+            <name>Anypoint Exchange</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven
+            </url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
 </project>
