--- a/pom.xml
+++ b/pom.xml
@@ -151,12 +151,11 @@
     </repository>
   </distributionManagement> -->
   <distributionManagement>
-        <repository>
-            <id>anypoint-exchange</id>
-            <name>Anypoint Exchange</name>
-            <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven
-            </url>
-            <layout>default</layout>
-        </repository>
-    </distributionManagement>
+  <repository>
+  <id>anypoint-exchange</id>
+  <name>Anypoint Exchange</name>
+  <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
+  <layout>default</layout>
+  </repository>
+  </distributionManagement>
 </project>
