--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		<!--<repository>
+		<repository>
          <id>Repository</id>
          <name>Private Exchange repository</name>
          <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.groupId}/maven</url>
