--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,16 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
-
+    
+	<repositories>
+        <repository>
+            <id>anypoint-exchange</id>
+            <name>Corporate Repository</name>
+            <url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+	
 	<!--<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
