--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
   <distributionManagement>
         <repository>
             <id>anypoint-exchange-v3</id>
-            <name>Corporate Repository</name>
+            <name>Exchange Private Repository</name>
             <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/dc97dd15-3cdb-48b2-8929-6be8f72efc42/maven</url>
             <layout>default</layout>
         </repository>
